<resources>
    <string name="app_name">Healing Hands</string>
    <string name="hallo_grandpap">שלום איל</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="time">TIME</string>
    <string name="stop">Stop</string>
    <string name="input_healing_time">אנא הכנס זמן טיפול</string>
    <string name="minutes">דקות</string>
    <string name="_60">60</string>
    <string name="healing_time">זמן טיפול:</string>
    <string name="interval_time">צליל בכל:</string>
    <string name="_3">3</string>
    <string name="reset">Reset</string>
    <string name="seconds">שניות</string>
    <string name="_15">15</string>
    <string name="preparation_time">זמן הכנה:</string>
    <string name="_00_00">00:00</string>
    <string name="_continue">Continue</string>
</resources>