<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/ivHands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:paddingBottom="8sp"
        android:src="@drawable/hands"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/llMinutesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/healing_time"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etTimeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/_60"
            android:importantForAutofill="no"
            android:inputType="number|numberSigned"
            android:minWidth="48dp"
            android:selectAllOnFocus="true"
            android:textColorHint="#A1887F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/minutes"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIntervalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/interval_time"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etIntervalInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/_3"
            android:importantForAutofill="no"
            android:inputType="number|numberSigned"
            android:minWidth="48dp"
            android:selectAllOnFocus="true"
            android:textColorHint="#A1887F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvMinute2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingEnd="8dp"
            android:text="@string/minutes"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStartPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:elevation="10dp"
        android:text="@string/start"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>